# Aerolinea

./: .gitignore  README.md  main.cpp  prueba.layout
legacy/: README.md  main.cpp  nodo.h  paises.cpp  paises.h  prueba.cbp  prueba.depend
modern-qt-sqlserver/: Aerolinea.sql  CMakeLists.txt  aeronave.cpp  aeronave.h  databasemanager.cpp  databasemanager.h  destino.cpp  destino.h  main.cpp  mainwindow.cpp  mainwindow.ui  resources.qrc  ruta.cpp  ruta.h  rutamanager.cpp  rutamanager.h  vuelo.cpp  vuelo.h
